2004-03-02  Guillaume Smet <guillaume-gforge@smet.org>

	* Applied patch [ #706 ] to improve German localization
	* Improved language_file_merger.php (tools module)
	* Converted doc from Maven xdoc to XML Docbook

2004-02-26  Tom Copeland <tom@infoether.com>
	* Applied patch [ #685 ] Translation to PortugueseBrasilian
	* SQL optimization: Replaced 'select *' in PluginManager.class,
	BaseLanguage.class, and ArtifactType.class with explicit column names.
	* Added some PHPDocs to BaseLanguage.class.

2004-02-19  Tom Copeland <tom@infoether.com>
	* Fixed bug [ #693 ] News dates showing up as Jan 1 1970

2004-02-19  Sung Kim <hunkim@cs.ucsc.edu>
	* Rewrite the Survey module
	* Added a general graph module for Survey results

2004-02-19  Guillaume Smet <guillaume-gforge@smet.org>
	
	* merged [ #690 ] by Benoît Sibaud with French.tab cvs version
	* updated french localization again
	* improved localization of task manager
	* fixed ShowResultSet function

2004-02-18  Guillaume Smet <guillaume-gforge@smet.org>
	
	* updated french localization
	* with Christian : applied admin -kkv to enable cvs keywords substitution
	on files which were in -ko mode

2004-02-17  Guillaume Smet <guillaume-gforge@smet.org>

	* sf_ldap_check_group now returns false when ldap is not used
	(users were not activated when the project was approved)
	* updated french localization
	* corrected several UI bugs
	* removed edit release link from /project/admin/
	* fixed a consistency problem in cvs/ssh related cronjobs

2004-02-13  Guillaume Smet <guillaume-gforge@smet.org>

	* Improved newest projects box localization and sql query
	* Improved /admin/ localization and UI
	* Improved /admin/ french localization

2004-02-10  Tim Perdue  <tim@perdue.net>

	* re-organize and mild cleanup of FRS - all files
	are in new /frs/ directory. NOTE - the sys_use_files
	switch is changes to sys_use_frs for consistency!

2004-02-09  Tom Copeland <tom@infoether.com>
	* Implemented RFE [ #657 ] Trove Deletion Error